--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Blog</title>
-    <!-- Bootstrap CSS -->
+    {{! Style Sheet }}
+    <link rel="stylesheet" href="/css/reset.css" />
+    {{! Style Sheet }}
+    <link rel="stylesheet" href="/css/style.css" />
+    {{! Bootstrap CSS }}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,14 +16,106 @@
     />
   </head>
   <body>
-    <a class="nav-link active" aria-current="page" href="/">Home</a>
+    <header>
+      {{#if loggedIn}}
+        <h2 id="greeting">Hello {{username}}!</h2>
+      {{else}}
+        <a id="login-link" class="nav-link" href="/login">
+          <h4>Login</h4>
+        </a>
+      {{/if}}
+
+      <nav class="navbar navbar-dark navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div id="nav-links" class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="/">
+                <h4>Home</h4>
+              </a>
+              <a class="nav-link" href="/dashboard/{{id}}">
+                <h4>Dashboard</h4>
+              </a>
+              {{#if loggedIn}}
+                <button id="logout" type="click"><h4>Logout</h4></button>
+              {{else}}
+                <a class="nav-link" href="/signup">
+                  <h4>Sign Up</h4>
+                </a>
+              {{/if}}
+            </div>
+          </div>
+        </div>
+        {{#if loggedIn}}
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+          >
+            Create New Post</button>
+
+          <div
+            class="modal fade"
+            id="exampleModal"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <form id="new-post">
+                  <div class="modal-header">
+                    <input
+                      id="title"
+                      class="form-control"
+                      type="text"
+                      placeholder="Title"
+                    />
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+
+                  <input
+                    id="text"
+                    class="form-control"
+                    type="text"
+                    placeholder="Text"
+                  />
+
+                  <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">POST</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        {{/if}}
+      </nav>
+    </header>
     <main>
       {{{body}}}
     </main>
-    {{#if loggedIn}}
-      <button id="logout" type="click">LOGOUT</button>
-    {{/if}}
-
+    <footer>
+          <blockquote class="blockquote mb-0">
+            <p>"The web as I envisaged it, we have not seen it yet. The future is still so much bigger than the past." - Tim Berners-Lee</p>
+            <p>Let's all use this platform to continue innovating!</p>
+          </blockquote>
+    </footer>
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -27,7 +123,8 @@
       crossorigin="anonymous"
     ></script>
     {{#if loggedIn}}
-      <script src="./js/logout.js"></script>
+      <script src="/js/logout.js"></script>
+      <script src="/js/post.js"></script>
     {{/if}}
   </body>
 </html>
