LAST view update

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -110,7 +110,7 @@
     <main>
       {{{body}}}
     </main>
-    <footer>
+    <footer class="h-25">
           <blockquote class="blockquote mb-0">
             <p>"The web as I envisaged it, we have not seen it yet. The future is still so much bigger than the past." - Tim Berners-Lee</p>
             <p>Let's all use this platform to continue innovating!</p>
