--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,18 @@
-<form id="login-form">
-  <div>
-    <label for="email" class="form-label">Email address</label>
-    <input class="form-control" type="email" id="email" />
-    <div class="mb-3">
-      <label for="password" class="form-label">Password</label>
+<form class="background" id="login-form">
+  <div class="container">
+    <div class="m-5">
+      <label for="email" class="form-label"><h3>Email Address</h3></label>
+      <input class="form-control" type="email" id="email" />
+    </div>
+    <div class="m-5">
+      <label for="password" class="form-label"><h3>Password</h3></label>
       <input class="form-control" type="password" id="password" />
     </div>
-    <div id="emailHelp" class="form-text">We'll never share your information
-      with anyone else.</div>
+    <div id="emailHelp" class="form-text h-25">We'll never share your
+      information with anyone else.</div>
   </div>
-  <button type="submit">Submit</button>
-  <a href="/signup">Sign up instead</a>
+  <button class="btn btn-primary" type="submit">Submit</button>
+  <a class="btn btn-primary" href="/signup">Sign up instead</a>
 </form>
 
 <script src="./js/login.js"></script>
