--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,24 +1,24 @@
-<div>
+<div class="background">
   <h2>Create Account</h2>
-  <form id="signup-form">
-    <div>
+  <form class="background m-5" id="signup-form">
+    <div class="background m-3">
       <label for="username" class="form-label">Username:</label>
-      <input id="username" class="form-control" type="text" >
+      <input id="username" class="form-control" type="text" />
     </div>
-    <div>
+    <div class="background m-3">
       <label for="user-email" class="form-label">Email:</label>
-      <input id="user-email" class="form-control" type="email">
-    <div>
-      <label for="user-password" class="form-label">Password:</label>
-      <input id="user-password" class="form-control" type="password">
+      <input id="user-email" class="form-control" type="email" />
     </div>
-        </div>
-    		<div id='emailHelp'>We'll never share your information with
-			anyone else.</div>
-	</div>
-    <button type="submit">SIGN UP</button>
+
+    <div class="background m-3">
+      <label for="user-password" class="form-label">Password:</label>
+      <input id="user-password" class="form-control" type="password" />
+    </div>
+    <div class="background m-3" id="emailHelp">
+      We'll never share your information with anyone else.
+    </div>
+    <button class="btn btn-primary" type="submit">SIGN UP</button>
   </form>
-  <div id="error"></div>
 </div>
 
 <script src="/js/signup.js"></script>
